--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@ body {
 
 <div class="topnav">
      
-  <a href="Sherilyn Silviani Web.html">About Me</a>
+  <a href="index.html">About Me</a>
   <a href="#">Portfolio</a>
   <a href="#">Beauty and Skincare</a>
   <a href="#">Movies and Music</a>
