--- a/portfolio.html
+++ b/portfolio.html
@@ -18,44 +18,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<style>
-
-{
-    box-sizing: border-box;
-}
-
-body {
-  margin:0;
-}
-
-
-
-/* Style the top navigation bar */
-.topnav {
-
-    overflow: hidden;
-    background-color: rgb(131, 107, 80);
-}
-
-/* Style the topnav links */
-.topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    margin-left: 90px;
-    padding: 10px 14px;
-    text-decoration: none;
-    position:relative;
-}
-
-/* Change color on hover */
-.topnav a:hover {
-    background-color: #bbb780;
-    color: black;
-    transition: all ease-in-out 400ms;
-}
-</style>
 </head>
 <body>
 
@@ -64,33 +26,39 @@ body {
      
   <a href="index.html">About Me</a>
   <a href="#">Portfolio</a>
-  <a href="#">Beauty and Skincare</a>
-  <a href="#">Movies and Music</a>
-  <a href="#">Foodies</a>
-   <a href="#">FAQ</a>
+  <a href="beauty.html">Beauty and Skincare</a>
+  <a href="moviesmusic.html">Movies and Music</a>
+  <a href="foodies.html">Foodies</a>
+   <a href="faq.html">FAQ</a>
 </div>
 </h2>
 
 
-</style>
 
-  
 
-<p id= "intro"> <br>
+<div class= "main">
+<br>
     <br>
-    
-    Hello and welcome. <br> 
-    My name is Sherilyn, I am 22 years of age and had just
-    graduated from Maranatha Christian University as a Bachelor of Arts student.
-    I took graphic design as my major but I'm also interested in becoming a UI/UX
-    designer, that's why I took this programming class. 
-    So far, I've been having a lot
-    of fun trying it. Wish me a hell lot of luck ok! I'm the eldest out of two children,
-    I have a little sister she's 14 and she's the sassiest shistar ever. I live in Cimahi area,
-    specifically in gunung batu dalam. Here's my location:
+   <p> 
+   These are some of the works I've done in my years of studying graphic design. I enjoy some branding projects, packaging design, book design, and also UI/UX. <br>
+   I'm really interested in UI/UX design, hence the reason I'm taking a programming class, and I'm really looking forward to master this art! :) <br>
+   Take a look at some of them please!
     <br>
     <br>
+  </div> 
 </p>
+
+<div class="gallery">
+  <a href="img/portoimg1.jpg"><img src="img/porto-small-1.jpg"></a>
+  <a href="img/portoimg2.jpg"><img src="img/porto-small-2.jpg"></a>
+  <a href="img/portoimg3.jpg"><img src="img/porto-small-3.jpg"></a>
+  <a href="img/portoimg4.jpg"><img src="img/porto-small-4.jpg"></a>
+
+</div>
+</div>
+</div>
+</div>
+  
 <br>
 <p> <center> Contact me: <br>
 
